--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="nav-bar">
-        <button><a href="">Home |</a></button>
+        <button><a href="">Homeeee |</a></button>
         <a href="">Contacto |</a>
         <a href="">Preguntas frecuentes |</a>
         <a href="">Escribinos |</a>
