--- a/views/home.html
+++ b/views/home.html
@@ -8,11 +8,15 @@
     <title>HELÁRTICO</title>
 </head>
 <body>
+    
     <section class="nav-bar">
         <button><a href="">Home |</a></button>
         <a href="">Contacto |</a>
         <a href="">Preguntas frecuentes |</a>
         <a href="">Escribinos |</a>
     </section>
+    <div class="iri">
+        <img src="./images/imagen1.jpg">
+    </div>
 </body>
 </html>
