--- a/views/home.html
+++ b/views/home.html
@@ -4,19 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./css/style.css" rel="stylesheet">
+    <link href="../public/css/style.css" rel="stylesheet">
     <title>HELÁRTICO</title>
+    <link rel="icon" href= "../public/images/Helado home.png" />
 </head>
-<body>
+<body >
+  
+<header>
+    <nav>
+      <ul>
+        <li>
+          <a href="">Inicio</a>
+        </li>
+        <li>
+          <a href="">Productos</a>
+        </li>
+        <li>
+          <a href="">Sabores</a>
+        </li>
+        <li>
+          <a href="">Locales</a>
+        </li>
+        <li>
+          <a href="">Contacto</a>
+        </li>
+      </ul>
+    </nav>
+</header>
+
+
+  <main>
     
-    <section class="nav-bar">
-        <button><a href="">Homeeee |</a></button>
-        <a href="">Contacto |</a>
-        <a href="">Preguntas frecuentes |</a>
-        <a href="">Escribinos |</a>
-    </section>
-    <div class="iri">
-        <img src="./images/imagen1.jpg">
-    </div>
+  </main>
+
+  <section>
+    <img class="postre_home_1" src="../public/images/PostreHleado1.png" alt="">
+      
+      <img class="postre_home_1" src="../public/images/helado home 2.jpg" alt="">
+      <img class="postre_home_1" src="../public/images/postre helado 3.jpg" alt="">
+      <img class="postre_home_1" src="../public/images/alfajor helado.jpg" alt="">
+  </section>
+ <footer></footer>
+
 </body>
+
 </html>
