--- a/views/home.html
+++ b/views/home.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link href="../public/css/style.css" rel="stylesheet">
+    <link href="../css/style.css" rel="stylesheet">
     <title>HELÁRTICO</title>
-    <link rel="icon" href= "../public/images/Helado home.png" />
+    <link rel="icon" href= "/images/Helado home.png" />
 </head>
 
   
@@ -43,6 +43,11 @@
           <a href="">Contacto</a>
           </h4>
         </li>
+        <li>
+          <h4>
+          <a  href="">Compra online</a>
+          </h4>
+        </li>
       </ul>
     </nav>
 
@@ -59,17 +64,28 @@
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
       </div>
       <div class="offcanvas-body">
-        <form>
-          <div class="mb-3">
-            <label for="nombre" class="form-label">Ingrese su nombre:</label>
-            <input type="text" class="form-control" id="nombre" name="nombre">        
-          </div>
-          <div class="mb-3">
-            <label for="clave" class="form-label">Ingrese su clave:</label>
-            <input type="password" class="form-control" id="clave" name="clave">
-          </div>
-          <button type="submit" class="btn btn-primary">Confirmar</button>
-        </form>            
+        <form action="resultado.html" method="POST">
+          <p>
+            <!-- campo para el nombre -->
+            <label> Usuario: </label>
+            <input type="text" name="nombre" required>
+          </p>
+    
+          <p>
+            <!-- campo para el email -->
+            <label> Email: </label>
+            <input type="email" name="email" required>
+          </p>
+          
+          <p>
+            <!-- campo para la contraseña -->
+            <label> Contraseña: </label>
+            <input type="password" name="password" required>
+          </p>
+          <p>     
+            <input type="submit" value="ENVIAR">
+          </p>
+        </form>          
       </div>
     </div>    
   </div>
@@ -117,15 +133,15 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img width="5000px" src="../public/images/ejemplo.jpg">
+        <img width="5000px" src="/images/ejemplo.jpg">
       </div>
 
       <div class="item">
-        <img width="5000px"src="../public/images/ejemplo.jpg">
+        <img width="5000px" src="/images/ejemplo.jpg">
       </div>
     
       <div class="item">
-        <img width="5000px"src="../public/images/ejemplo.jpg">
+        <img width="5000px" src="/images/ejemplo.jpg">
       </div>
     </div>
 
@@ -143,10 +159,10 @@
   </main>
 
 <section>
-    <img class="postre_home_1" src="../public/images/PostreHleado1.png" alt="">
-      <img class="postre_home_1" src="../public/images/helado home 2.jpg" alt="">
-      <img class="postre_home_2" src="../public/images/postre helado 3.jpg" alt="">
-      <img class="postre_home_2" src="../public/images/alfajor helado.jpg" alt="">
+    <img class="postre_home_1" src="/images/PostreHleado1.png" alt="">
+      <img class="postre_home_1" src="./images/helado home 2.jpg" alt="">
+      <img class="postre_home_2" src="./images/postre helado 3.jpg" alt="">
+      <img class="postre_home_2" src="./images/alfajor helado.jpg" alt="">
 
       <h4 class="texto_home_1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
       <h4 class="texto_home_2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
