--- a/public/css/style.css
+++ b/public/css/style.css
@@ -147,8 +147,17 @@ section{
   z-index: -1
 }
 
+.size {
+    width: 20px;
+    height: 20px;
+}
 
 
 
-
-
+footer {
+    margin-top: 17%;
+    width: 100%;
+    height: 20vw;
+    background-color: rgb(207, 181, 164);
+    text-align: center;
+  }
