--- a/views/home.html
+++ b/views/home.html
@@ -45,7 +45,7 @@
         </li>
         <li>
           <h4>
-          <a  href="">Compra online</a>
+          <a> <img class="size" src="/images/shopping-cart.png"></a>
           </h4>
         </li>
       </ul>
@@ -71,11 +71,6 @@
             <input type="text" name="nombre" required>
           </p>
     
-          <p>
-            <!-- campo para el email -->
-            <label> Email: </label>
-            <input type="email" name="email" required>
-          </p>
           
           <p>
             <!-- campo para la contraseña -->
@@ -83,7 +78,7 @@
             <input type="password" name="password" required>
           </p>
           <p>     
-            <input type="submit" value="ENVIAR">
+            <button type="submit" class="btn btn-primary">Login </button>
           </p>
         </form>          
       </div>
@@ -93,10 +88,10 @@
     
    <div class="container">
 
-    <a class="btn btn-primary register" data-bs-toggle="offcanvas" href="#offcanvas1">
+    <a class="btn btn-primary register" data-bs-toggle="offcanvas" href="#offcanvas2">
       Registrarse
     </a>   
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas1">
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas2">
       <div class="offcanvas-header">
         <h3 class="offcanvas-title">Registrarse</h3>
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
@@ -104,14 +99,18 @@
       <div class="offcanvas-body">
         <form>
           <div class="mb-3">
-            <label for="nombre" class="form-label">Ingrese su nombre:</label>
-            <input type="text" class="form-control" id="nombre" name="nombre">        
+            <label for="nombre" class="form-label">Usuario:</label>
+            <input type="text" class="form-control" id="usuario" name="usuario" required>        
           </div>
           <div class="mb-3">
-            <label for="clave" class="form-label">Ingrese su clave:</label>
-            <input type="password" class="form-control" id="clave" name="clave">
+            <label for="clave" class="form-label">Contraseña:</label>
+            <input type="password" class="form-control" id="clave" name="clave" required>
           </div>
-          <button type="submit" class="btn btn-primary">Confirmar</button>
+          <div class="mb-3">
+            <label for="clave" class="form-label">Confirmar contraseña:</label>
+            <input type="password" class="form-control" id="clave" name="clave" required>
+          </div>
+          <button type="submit" class="btn btn-primary">Confirmar </button>
         </form>            
       </div>
     </div>    
@@ -169,7 +168,9 @@
       <h4 class="texto_home_3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
       <h4 class="texto_home_4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
   </section>
- <footer></footer>
+ <footer>
+   <h1>soy el footer soy el footer, soyyyyy el footer</h1>
+ </footer>
 
 
 
