--- a/public/css/style.css
+++ b/public/css/style.css
@@ -155,9 +155,11 @@ section{
 
 
 footer {
-    margin-top: 17%;
+    margin-top: 27%;
     width: 100%;
     height: 20vw;
     background-color: rgb(207, 181, 164);
-    text-align: center;
+    text-align:start;
+    font-weight: bold;
+    color: black;
   }
