--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,7 @@ header nav ul {
   display: -ms-flexbox;
   display: flex;
   justify-content: center;
+  
 }
 
 
@@ -34,6 +35,7 @@ header nav ul a {
   padding: 15px 20px;
   color: rgb(10, 10, 10);
   text-decoration: none;
+  font-family: 'Dancing Script';
 }
 
 
@@ -54,11 +56,10 @@ main{
 
 /*---------------------------SECTION----------------------------------*/
 section{
-
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 15vw;
+    margin-top: -200px;
     height: 69vw;
     width: 70vw;
     margin-left: 12vw;
@@ -120,16 +121,18 @@ section{
 
 
 .login{
-    position: relative;
+    position: absolute;
     left: 87vw;
-    bottom: 4vw;
+    top: 1.5vw;
+    font-family: 'Dancing Script'
 
 }
 
 .register{
-    position: relative;
+    position: absolute;
     left: 78vw;
-    bottom: 6.5vw;
+    top: 1.5vw;
+    font-family: 'Dancing Script'
 }
 
 
@@ -143,8 +146,8 @@ section{
   position:absolute;
   left: 0px;
   right: 0px;
-  top: 120px;
-  z-index: -1
+  top: 65px;
+  z-index: -1;
 }
 
 .size {
@@ -163,3 +166,55 @@ footer {
     font-weight: bold;
     color: black;
   }
+
+
+  *{padding: 0; margin: 0; box-sizing: border-box;}
+body{height: 900px;}
+header {
+	text-align: center;
+	width: 100%;
+	height: auto;
+	background-size: cover;
+	background-attachment: fixed;
+	position: relative;
+	overflow: hidden;
+	border-radius: 0 0 85% 85% / 30%;
+}
+header .overlay{
+	width: 100%;
+	height: 100%;
+	padding: 7px;
+	color: #FFF;
+	text-shadow: 1px 1px 1px #333;
+  background-image: linear-gradient( 135deg, #e2e1de69 10%, #fbf9f96b 100%);
+
+	
+}
+
+h1 {
+	font-family: 'Dancing Script';
+    color:rgb(56, 52, 52);
+	font-size: 80px;
+	margin-bottom: 30px;
+}
+
+h3, p {
+	font-family: 'Dancing Script';
+	margin-bottom: 30px;
+    color:rgb(56, 52, 52);
+
+}
+
+button {
+	border: none;
+	outline: none;
+	padding: 10px 20px;
+	border-radius: 50px;
+	color: #333;
+	background: #fff;
+	margin-bottom: 50px;
+	box-shadow: 0 3px 20px 0 #0000003b;
+}
+button:hover{
+	cursor: pointer;
+}
