--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,8 @@
 </head>
 
   
-<header>
+
+  <header>
     <nav>
       <ul>
         <li>
@@ -50,9 +51,15 @@
         </li>
       </ul>
     </nav>
+    <div class="overlay">
+  <h1>HELÁRTICO</h1>
+  <h3>1000 razones para elegirnos</h3>
+  
+    <br>
+    <button>SOBRE NOSOTROS</button>
+      </div>
 
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
    <div class="container">
 
     <a class="btn btn-primary login" data-bs-toggle="offcanvas" href="#offcanvas1">
@@ -116,6 +123,7 @@
     </div>    
   </div>
 
+
  </header>
   <main>
 
@@ -145,14 +153,7 @@
     </div>
 
     <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
+    
   </div>
 </div>
   </main>
