--- a/public/css/style.css
+++ b/public/css/style.css
@@ -218,3 +218,14 @@ button {
 button:hover{
 	cursor: pointer;
 }
+
+.logo {
+    width: 98px;
+    height: 98px;
+}
+
+.ubicar {
+    position: absolute;
+    left: 5px;
+    top: -15px;
+}
