--- a/views/home.html
+++ b/views/home.html
@@ -9,16 +9,20 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link href="../css/style.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
     <title>HELÁRTICO</title>
-    <link rel="icon" href= "/images/Helado home.png" />
+    <link rel="icon" href= "/images/pixlr-bg-result.png" />
 </head>
 
-  
 
   <header>
     <nav>
       <ul>
+        <li>
+          
+          <img class="logo ubicar" src="/images/logo2.png">
+         
+        </li>
         <li>
           <h4> 
           <a href="">Inicio</a>
@@ -58,6 +62,7 @@
     <br>
     <button>SOBRE NOSOTROS</button>
       </div>
+
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
    <div class="container">
