--- a/views/home.html
+++ b/views/home.html
@@ -60,14 +60,14 @@
   <h3>1000 razones para elegirnos</h3>
   
     <br>
-    <button>SOBRE NOSOTROS</button>
+    <button><h5>SOBRE NOSOTROS</h5></button>
       </div>
 
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
    <div class="container">
 
-    <a class="btn btn-primary login" data-bs-toggle="offcanvas" href="#offcanvas1">
+    <a class="btn login" data-bs-toggle="offcanvas" href="#offcanvas1">
       Login
     </a>   
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas1">
@@ -100,7 +100,7 @@
     
    <div class="container">
 
-    <a class="btn btn-primary register" data-bs-toggle="offcanvas" href="#offcanvas2">
+    <a class="btn register" data-bs-toggle="offcanvas" href="#offcanvas2">
       Registrarse
     </a>   
     <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas2">
