--- a/views/home.html
+++ b/views/home.html
@@ -20,22 +20,22 @@
       <ul>
         <li>
           
-          <img class="logo ubicar" src="/images/logo2.png">
+          <img class="logo ubicar" src="/images/logo_helartico.png">
          
         </li>
         <li>
           <h4> 
-          <a href="">Inicio</a>
+          <a href="/">Inicio</a>
          </h4>
         </li>
         <li>
           <h4>
-          <a href="">Productos</a>
+          <a href="/productos">Productos</a>
           </h4>
         </li>
         <li>
           <h4>
-          <a href="">Sabores</a>
+          <a href="/sabores">Sabores</a>
           </h4>
         </li>
         <li>
