de todo un poco

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -165,184 +165,7 @@ section{
     height: 20px;
 }
 
-.footer-distributed{
-	background: rgb(207, 181, 164);
-	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
-	box-sizing: border-box;
-	width: 100%;
-	text-align: left;
-	font: bold 16px ;
-	padding: 55px 50px;
-    font-family: 'Dancing Script';
-}
 
-.footer-distributed .footer-left,
-.footer-distributed .footer-center,
-.footer-distributed .footer-right{
-	display: inline-block;
-	vertical-align: top;
-}
-
-/* Footer left */
-
-.footer-distributed .footer-left{
-	width: 40%;
-}
-
-/* The company logo */
-
-.footer-distributed h3{
-	color:  #ffffff;
-	font: normal 36px;
-    font-family: 'Dancing Script';
-	margin: 0;
-}
-
-
-
-/* Footer links */
-
-.footer-distributed .footer-links{
-	color:  #ffffff;
-	margin: 20px 0 12px;
-	padding: 0;
-}
-
-.footer-distributed .footer-links a{
-	display:inline-block;
-	line-height: 1.8;
-  font-weight:400;
-	text-decoration: none;
-	color:  inherit;
-}
-
-.footer-distributed .footer-company-name{
-	color:  #222;
-	font-size: 14px;
-	font-weight: normal;
-	margin: 0;
-}
-
-/* Footer Center */
-
-.footer-distributed .footer-center{
-	width: 35%;
-}
-
-.footer-distributed .footer-center i{
-	background-color:  #33383b;
-	color: #ffffff;
-	font-size: 25px;
-	width: 38px;
-	height: 38px;
-	border-radius: 50%;
-	text-align: center;
-	line-height: 42px;
-	margin: 10px 15px;
-	vertical-align: middle;
-}
-
-.footer-distributed .footer-center i.fa-envelope{
-	font-size: 17px;
-	line-height: 38px;
-}
-
-.footer-distributed .footer-center p{
-	display: inline-block;
-	color: #ffffff;
-  font-weight:400;
-	vertical-align: middle;
-	margin:0;
-}
-
-.footer-distributed .footer-center p span{
-	display:block;
-	font-weight: bold;
-	font-size:14px;
-	line-height:2;
-}
-
-
-
-.footer-distributed .footer-links a:before {
-  content: "|";
-  font-weight:300;
-  font-size: 20px;
-  left: 0;
-  color: #fff;
-  display: inline-block;
-  padding-right: 5px;
-}
-
-.footer-distributed .footer-links .link-1:before {
-  content: none;
-}
-
-/* Footer Right */
-
-.footer-distributed .footer-right{
-	width: 20%;
-}
-
-.footer-distributed .footer-company-about{
-	line-height: 20px;
-	color:  #92999f;
-	font-size: 13px;
-	font-weight: normal;
-	margin: 0;
-}
-
-.footer-distributed .footer-company-about span{
-	display: block;
-	color:  #ffffff;
-	font-size: 14px;
-	font-weight: bold;
-	margin-bottom: 20px;
-}
-
-.footer-distributed .footer-icons{
-	margin-top: 25px;
-}
-
-.footer-distributed .footer-icons a{
-	display: inline-block;
-	width: 35px;
-	height: 35px;
-	cursor: pointer;
-	background-color:  #33383b;
-	border-radius: 2px;
-
-	font-size: 20px;
-	color: #ffffff;
-	text-align: center;
-	line-height: 35px;
-
-	margin-right: 3px;
-	margin-bottom: 5px;
-}
-
-/* If you don't want the footer to be responsive, remove these media queries */
-
-@media (max-width: 880px) {
-
-	.footer-distributed{
-		font: bold 14px sans-serif;
-	}
-
-	.footer-distributed .footer-left,
-	.footer-distributed .footer-center,
-	.footer-distributed .footer-right{
-		display: block;
-		width: 100%;
-		margin-bottom: 40px;
-		text-align: center;
-	}
-
-	.footer-distributed .footer-center i{
-		margin-left: 0;
-	}
-
-}
 
 
 
@@ -379,10 +202,11 @@ h1 {
 	margin-bottom: 30px;
 }
 
+
 h3, p {
 	font-family: 'Dancing Script';
 	margin-bottom: 30px;
-    color:rgb(56, 52, 52);
+  color: #333;
 
 }
 
@@ -390,7 +214,7 @@ h5, h4 {
     font-family: 'Dancing Script';
 }
 
-button {
+.button_carrusel {
 	border: 2px;
 	outline: none;
 	padding: 10px 20px;
@@ -403,7 +227,7 @@ button {
 button:hover{
 	cursor: pointer;
 }
-
+/*---------------------------logo----------------------------------*/
 .logo {
     width: 98px;
     height: 98px;
@@ -417,37 +241,37 @@ button:hover{
 
 /*---------------------------productos.html----------------------------------*/
 
-section {
+.section_productos {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     margin-top: 5%;
+    height: 500px;
+    position: relative;
+    left: 400px;
+    bottom: 403px;
   }
-  
-  article {
-      padding: 0px;
-  }
-  
-  
   
   .container-flex-box {
     display: flex;
     
   }
-  .flex-grow-30 {
-      
-      width: 200px;
+  .flex-grow-30 {   
+    width: 200px;
     flex-grow: 0.3;
   }
+
   .flex-grow-50 {
     flex-grow: 0.5;
   }
+
   .flex-grow-70 {
     flex-grow: 0.7;
   }
+
   .list {
-      width: 100px;
-      margin-top: 10vw;
+    width: 370px;
+    margin-top: 10vw;
   }
   
   .kilo {
@@ -494,54 +318,133 @@ div.img img {
 
 /*---------------------------sabores.html VERSION 2---------------------------------*/
 
+.accordion{
+  position: relative;
+  right: 5.4vw;
+}
+.accordion-button{
+  background-color: rgb(216, 162, 123);
+ 
+  
+ 
+}
 
-        
-       div.titulo{
-        width:80%;
-        height:50px;
-        overflow: hidden;
-        border-bottom: 2px solid rgb(182, 104, 89);
-       }
-        
-       p.titulo{
-        color: rgb(182, 104, 89);
-        text-align: center;
-       }
+.accordion-header{
+  border: 2px solid rgb(15, 15, 15);
+  background-color: chocolate;
+  justify-content: center;
+}
 
-       div ul li {
-           text-align: center;
-       }
-        
-       div.informacion{
-        width:100%;
-        height:0px;
-        overflow: hidden;
-        transition: 2s;
-        -webkit-transiton: height 2s;
-       }
-        
-      
-       div.seccion:hover div.informacion{
-        height:180px;
-       }
-        
-       
-        
-       .imginformacion{
-        float:CENTER;
-        
-       }
-        
+.accordion-item{
+  text-align: center;
+}
+ 
 
-       div.informacion{
-        width:80%;
-        height:0px;
-        overflow: hidden;
-        transition: 2s;
-        -webkit-transiton: height 2s;
-    
-    }
-        
-       div.seccion:hover div.informacion{
-        height:100%;
-       } 
+
+
+
+
+
+
+
+/*---------------------------------------------------------------------------------------FOOTER---------------------------------------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------FOOTER---------------------------------------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------FOOTER---------------------------------------------------------------------------------------------*/
+/*---------------------------------------------------------------------------------------FOOTER---------------------------------------------------------------------------------------------*/
+
+
+
+.footer-distributed{
+	background: rgb(207, 181, 164);
+	padding: 55px 50px;
+}
+
+.footer-distributed .footer-left,
+.footer-distributed .footer-center,
+.footer-distributed .footer-right{
+	display: inline-block;
+	vertical-align: top;
+}
+
+
+.footer-distributed .footer-left{
+	width: 40%;
+}
+
+
+
+.footer-distributed .footer-links{
+	color:  #000000;
+	margin: 20px 0 12px;
+}
+
+.footer-distributed .footer-links a{
+	color:  inherit;
+}
+
+
+
+.footer-distributed .footer-center{
+	width: 35%;
+}
+
+
+
+
+.footer-distributed .footer-links a:before {
+  content: "|";
+  font-size: 20px;
+  color: #fff;
+  padding-right: 5px;
+}
+
+
+
+.footer-distributed .footer-company-about span{
+	display: block;
+	color:  black;
+	font-size: 20px;
+	font-weight: bold;
+	margin-bottom: 20px;
+  position: relative;
+  top: 85px;
+}
+
+
+
+.iconos{
+	width: 55px;
+  height: 55px;
+  padding: 10px;
+  position: relative;
+  top: 65px;
+}
+
+.titulo_footer{
+  font-size: 50px;
+}
+
+
+.logof{
+  width: 98px;
+  height: 98px;
+  position: relative;
+  left: 80px;
+}
+
+
+.emailf{
+  
+  position: relative;
+  top: 80px;
+  width: 270px;
+  height: 35px;
+}
+
+.botonf{
+  position: relative;
+  top: 93px;
+  width: 45px;
+  height: 35px;
+ 
+}
