--- a/views/home.html
+++ b/views/home.html
@@ -16,13 +16,10 @@
 
 
   <header>
+
+    <img class="logo ubicar" src="/images/logo_helartico.png">
     <nav>
       <ul>
-        <li>
-          
-          <img class="logo ubicar" src="/images/logo_helartico.png">
-         
-        </li>
         <li>
           <h4> 
           <a href="/">Inicio</a>
@@ -60,7 +57,7 @@
   <h3>1000 razones para elegirnos</h3>
   
     <br>
-    <button><h5>SOBRE NOSOTROS</h5></button>
+    <button class="button_carrusel"><h5>SOBRE NOSOTROS</h5></button>
       </div>
 
 
@@ -149,7 +146,7 @@
       </div>
 
       <div class="item">
-        <img width="5000px" src="/images/ejemplo.jpg">
+        <img width="2000px" src="/images/ejemplo.jpg">
       </div>
     
       <div class="item">
@@ -174,12 +171,17 @@
       <h4 class="texto_home_3">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
       <h4 class="texto_home_4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
   </section>
+
+
+
+
+
   <footer class="footer-distributed">
 
     <div class="footer-left">
-      <img class="logo" src="/images/logo_helartico.png">
+      <img class="logof" src="/images/logo_helartico.png">
 
-      <h3>HELÁRTICO</h3>
+      <h3 class="titulo_footer">HELÁRTICO</h3>
 
       <p class="footer-links">
         <a href="/" class="link-1">Inicio</a>
@@ -200,14 +202,13 @@
       <span>Redes sociales</span>
       <span>Seguinos en:</span>
     </p>
-      <div class="footer-icons">
+      
 
-        <a href=""><i class="fa fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
-        <a href="#"><i class="fa fa-github"></i></a>
+        <a href=""><img class="iconos" src="/images/logo face.png" alt=""><i class="fa fa-facebook"></i></a>
+        <a href="#"><img class="iconos" src="/images/logo ig.png" alt=""><i class="fa fa-twitter"></i></a>
+        <a href="#"><img class="iconos" src="/images/logo wpp.png" alt=""><i class="fa fa-linkedin"></i></a>
 
-      </div>
+      
 
       
 
@@ -218,6 +219,8 @@
       <p class="footer-company-about">
         <span>Novedades</span>
         <span>Recibí promociones y beneficios exclusivos:</span>
+        <input class="emailf" type="text" value="Email">
+        <button class="botonf"></button>
       </p>
 
 
