--- a/views/productos.html
+++ b/views/productos.html
@@ -66,15 +66,17 @@
             <button>Buscar</button>
         </form>
     </div>
-
-    <section>
-        <article class="list">
+<aside>
+  <article class="list">
         <a href=""><h3>Helados</h3></a>
         <a href=""><h3>Helados</h3></a>
         <a href=""><h3>Helados</h3></a>
         <a href=""><h3>Helados</h3></a>
         <a href=""><h3>Helados</h3></a>
         </article>
+</aside>
+    <section class="section_productos">
+        
         <article class="flex-grow-1 kilo">
             <div class=" img"><img src="images/kilo.png" alt=""></div>
             
@@ -87,7 +89,7 @@
         </article>
         
         <article class="flex-grow-1">
-            <div class="img"><img src="images/kilo.png" alt=""></div>
+            <div class="img"><img src="images/cuarto.jpg" alt=""></div>
             
             <div class="img container-flex-box">
               <h5 class="flex-grow-30">1/2 KG - HASTA 3 GUSTOS</h5>
@@ -97,7 +99,7 @@
         
         </article>
         <article class="flex-grow-1">
-            <div class="img"><img src="images/kilo.png" alt=""></div>
+            <div class="img"><img src="images/medio-kilo.png" alt=""></div>
             
             <div class="img container-flex-box">
               <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
@@ -106,6 +108,87 @@
             </div>
         
         </article>
+        <article class="flex-grow-1">
+            <div class="img"><img src="images/almendrado.jpg" alt=""></div>
+            
+            <div class="img container-flex-box">
+              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
+              <h5 class="flex-grow-30">$450</h5>
+              <button class="btn boton">Añadir al carrito</button>
+            </div>
+        
+        </article>
+        <article class="flex-grow-1">
+            <div class="img"><img src="images/paleta1.jpg" alt=""></div>
+            
+            <div class="img container-flex-box">
+              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
+              <h5 class="flex-grow-30">$450</h5>
+              <button class="btn boton">Añadir al carrito</button>
+            </div>
+        
+        </article>
+        <article class="flex-grow-1">
+            <div class="img"><img src="images/paleta2.jpg" alt=""></div>
+            
+            <div class="img container-flex-box">
+              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
+              <h5 class="flex-grow-30">$450</h5>
+              <button class="btn boton">Añadir al carrito</button>
+            </div>
+        
+        </article>
+        <article class="flex-grow-1">
+            <div class="img"><img src="images/alfajor.png" alt=""></div>
+            
+            <div class="img container-flex-box">
+              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
+              <h5 class="flex-grow-30">$450</h5>
+              <button class="btn boton">Añadir al carrito</button>
+            </div>
+        
+        </article>
+        <article class="flex-grow-1">
+            <div class="img"><img src="images/foto4.jpg" alt=""></div>
+            
+            <div class="img container-flex-box">
+              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
+              <h5 class="flex-grow-30">$450</h5>
+              <button class="btn boton">Añadir al carrito</button>
+            </div>
+        
+        </article>
+        <article class="flex-grow-1">
+            <div class="img"><img src="images/foto5.png" alt=""></div>
+            
+            <div class="img container-flex-box">
+              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
+              <h5 class="flex-grow-30">$450</h5>
+              <button class="btn boton">Añadir al carrito</button>
+            </div>
+        
+        </article>
+        <article class="flex-grow-1">
+            <div class="img"><img src="images/foto6.png" alt=""></div>
+            
+            <div class="img container-flex-box">
+              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
+              <h5 class="flex-grow-30">$450</h5>
+              <button class="btn boton">Añadir al carrito</button>
+            </div>
+        
+        </article>
+        <article class="flex-grow-1">
+            <div class="img"><img src="images/foto7.png" alt=""></div>
+            
+            <div class="img container-flex-box">
+              <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
+              <h5 class="flex-grow-30">$450</h5>
+              <button class="btn boton">Añadir al carrito</button>
+            </div>
+        
+        </article>
+        
         
     </section>
         
