--- a/views/sabores.html
+++ b/views/sabores.html
@@ -56,63 +56,85 @@
         </li>
       </ul>
     </nav>
-    </header>
-    <main>
-    <div class="seccion">
-    
-        <div class="titulo">
-         <p class="titulo">CHOCOLATE</p>
-        </div>
-      
-        <div class="informacion">
+</header>
+
+<main>
+    <div class="accordion">
+  <div class="accordion-item">
+    <h2 class="accordion-header">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">CHOCOLATE
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+      <div class="accordion-body">
+           <div>
           <UL>
-            <li>
+
               <h3>Chocolate Suizo</h3>
-            </li>
-            <li>
               <h3>Chocolate Nevado</h3>
-            </li>
-            <li>
               <h3>Chocolate Blanco</h3>
-            </li>
-            <li>
               <h3>Chocolate Bariloche</h3>
-            </li>
-            <li>
               <h3>Chocolate con almendras</h3>
-            </li>
+
           </UL>
           </p>
          
          
         </div>
-        <div class="seccion2">
-
-        <div class="titulo">
-          <p class="titulo">CREMAS</p>
-         </div>
-       
-         <div class="informacion">
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+        CREMAS
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
+      <div class="accordion-body">
+        <div>
            <UL>
-             <li>
+
                <h3>Chocolate Suizo</h3>
-             </li>
-             <li>
                <h3>Chocolate Nevado</h3>
-             </li>
-             <li>
                <h3>Chocolate Blanco</h3>
-             </li>
-             <li>
                <h3>Chocolate Bariloche</h3>
-             </li>
-             <li>
                <h3>Chocolate con almendras</h3>
-             </li>
+             
            </UL>
            </p>
           </div>
-          
-         </div>
-      </main>
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">DULCE DE LECHE
+      </button>
+    </h2>
+    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
+      <div class="accordion-body">
+        <UL>
+
+               <h3>Dulce de leche tentación</h3>
+               <h3>Super dulce de leche</h3>
+               <h3>Dulce de leche granizado</h3>
+               <h3>Dulce de leche con brownie</h3>
+               <h3>Dulce de leche con merengues</h3>
+             
+           </UL>
+      </div>
+    </div>
+  </div>
+ </div>
+         
+</main>
+
+<footer>
+
+</footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
+  </script>
     
