--- a/public/css/style.css
+++ b/public/css/style.css
@@ -206,7 +206,7 @@ h1 {
 h3, p {
 	font-family: 'Dancing Script';
 	margin-bottom: 30px;
-  color: #333;
+    color: #333;
 
 }
 
@@ -248,7 +248,7 @@ button:hover{
     margin-top: 5%;
     height: 500px;
     position: relative;
-    left: 400px;
+    left: 180px;
     bottom: 403px;
   }
   
@@ -312,6 +312,7 @@ div.img img {
       
 .search {
     margin-top: 30px;
+    text-align: center;
 }
 
 
