--- a/views/productos.html
+++ b/views/productos.html
@@ -57,7 +57,8 @@
         </li>
       </ul>
     </nav>
-   
+    </header>
+   <main>
     <div class="search">
         <form action="#">
             <input type="text"
@@ -188,7 +189,28 @@
             </div>
         
         </article>
+        <article class="flex-grow-1">
+          <div class="img"><img src="images/franui1.jpg" alt=""></div>
+          
+          <div class="img container-flex-box">
+            <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
+            <h5 class="flex-grow-30">$450</h5>
+            <button class="btn boton">Añadir al carrito</button>
+          </div>
+      
+      </article>
+
+      <article class="flex-grow-1">
+        <div class="img"><img src="images/torta-oreo.jpg" alt=""></div>
+        
+        <div class="img container-flex-box">
+          <h5 class="flex-grow-30">1/4 KG - HASTA 2 GUSTOS</h5>
+          <h5 class="flex-grow-30">$450</h5>
+          <button class="btn boton">Añadir al carrito</button>
+        </div>
+    
+    </article>
         
         
     </section>
-        
+  </main>
