--- a/views/sabores.html
+++ b/views/sabores.html
@@ -59,10 +59,17 @@
 </header>
 
 <main>
+<div>
+
+  <p>Nuestro helado está creado a partir de chocolate de origen ecuatoriano, frutas de estación y productos lácteos frescos.
+Utilizamos los mejores ingredientes y materias primas, seleccionados cuidadosamente.
+Nuestro dulce de leche está elaborado especialmente para crear el sabor más tentador, con una textura única. Incorporamos a nuestras cremas frutos secos, trozos de chocolate y frutas para que disfrutes en cada momento.
+</p>
+</div>
     <div class="accordion">
   <div class="accordion-item">
     <h2 class="accordion-header">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">CHOCOLATE
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" >CHOCOLATE
       </button>
     </h2>
     <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
@@ -85,7 +92,7 @@
     </div>
   </div>
   <div class="accordion-item">
-    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+    <h2 class="accordion-header">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
         CREMAS
       </button>
