--- a/views/home.html
+++ b/views/home.html
@@ -10,6 +10,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link href="/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/dekopt.css">
     <title>HELÁRTICO</title>
     <link rel="icon" href= "/images/pixlr-bg-result.png" />
 </head>
@@ -160,11 +161,11 @@
 </div>
   </main>
 
-<section>
-    <img class="postre_home_1" src="/images/PostreHleado1.png" alt="">
-      <img class="postre_home_1" src="./images/helado home 2.jpg" alt="">
-      <img class="postre_home_2" src="./images/postre helado 3.jpg" alt="">
-      <img class="postre_home_2" src="./images/alfajor helado.jpg" alt="">
+<section class="section_home">
+    <img class="postre_home_1 " src="/images/PostreHleado1.png" alt="">
+      <img class="postre_home_1 " src="./images/helado home 2.jpg" alt="">
+      <img class="postre_home_2 " src="./images/postre helado 3.jpg" alt="">
+      <img class="postre_home_2 " src="./images/alfajor helado.jpg" alt="">
 
       <h4 class="texto_home_1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
       <h4 class="texto_home_2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni doloremque corrupti distinctio iusto cum vitae, architecto sit assumenda vero quae ipsa illum eius maiores? Maiores animi iure et soluta laboriosam?</h4>
@@ -197,6 +198,18 @@
       </p>
     </div>
 
+    <div class="footer-right">
+
+      <p class="footer-company-about">
+        <span>Novedades</span>
+        <span>Recibí promociones y beneficios exclusivos:</span>
+        <input class="emailf" type="text" value="Email">
+        <button class="botonf"></button>
+      </p>
+
+
+    </div>
+
     <div class="footer-center">
       <p class="footer-company-about">
       <span>Redes sociales</span>
@@ -214,17 +227,7 @@
 
     </div>
 
-    <div class="footer-right">
-
-      <p class="footer-company-about">
-        <span>Novedades</span>
-        <span>Recibí promociones y beneficios exclusivos:</span>
-        <input class="emailf" type="text" value="Email">
-        <button class="botonf"></button>
-      </p>
-
-
-    </div>
+    
 
   </footer>
 
