--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,14 +57,14 @@ main{
 
 
 /*---------------------------SECTION----------------------------------*/
-section{
+.section_home{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin-top: -200px;
     height: 69vw;
     width: 70vw;
-    
+    margin-left: 200px;
 }
 
 
@@ -172,8 +172,8 @@ section{
 
 
 
-  *{padding: 0px; margin: 0; box-sizing: border-box;}
-body{height: 900px;}
+
+
 header {
 	text-align: center;
 	width: 100%;
@@ -182,8 +182,10 @@ header {
 	background-attachment: fixed;
 	position: relative;
 	overflow: hidden;
-	border-radius: 0 0 85% 85% / 30%;
+	/*border-radius: 0 0 85% 85% / 30%;*/ 
 }
+
+
 header .overlay{
 	width: 100%;
 	height: 100%;
@@ -242,14 +244,14 @@ button:hover{
 /*---------------------------productos.html----------------------------------*/
 
 .section_productos {
+  
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     margin-top: 5%;
-    height: 500px;
-    position: relative;
-    left: 400px;
-    bottom: 403px;
+    height: 1000px;
+    margin-left: 300px;
+    margin-top: -300px;
   }
   
   .container-flex-box {
