--- a/views/productos.html
+++ b/views/productos.html
@@ -60,12 +60,10 @@
     </header>
    <main>
     <div class="search">
-        <form action="#">
             <input type="text"
                 placeholder=" Barra de búsqueda"
                 name="search">
             <button>Buscar</button>
-        </form>
     </div>
 <aside>
   <article class="list">
@@ -84,7 +82,8 @@
             <div class="img container-flex-box">
               <h5 class="flex-grow-30">1 KG</h5>
               <h5 class="flex-grow-30">$1.250</h5>
-              <button class="btn boton">Añadir al carrito</button>
+           <a href="/sabores"><button class="btn boton">Elegir gustos</button></a>
+           <a href=""><button class="btn boton">Añadir al carrito</button></a>
             </div>
         
         </article>
