--- a/views/home.html
+++ b/views/home.html
@@ -49,11 +49,43 @@
         </li>
         <li>
           <h4>
-          <a> <img class="size" src="/images/shopping-cart.png"></a>
           </h4>
         </li>
       </ul>
     </nav>
+          <a> 
+            <img class="carrito size" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight" src="/images/shopping-cart.png">
+          </a>
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+  <div class="offcanvas-header">
+    <h3 id="offcanvasRightLabel">Tu pedido</h3>
+    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+  </div>
+  <div class="offcanvas-body">
+    <img class="carrito2" src="/images/alfajor.png" alt="foto-compra"> 
+    <div class="descripcion">
+    <h3 class="producto">Producto</h3>
+    <h4>$000</h4>
+    <label for="cantidad">Cantidad:</label>
+        <select name="cantidad" id="cantidad">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+        </select>
+      </div>
+      <br>
+      <hr>
+      <h3>Total:    $ </h3>
+      <button class="btn ver-pedido" type= "button" >Ver pedido</button><br>
+      <button class="btn terminar-pedido" type="button" >Terminar pedido</button>
+
+
+
+
+  </div>
+</div>
+          
     <div class="overlay">
   <h1>HELÁRTICO</h1>
   <h3>1000 razones para elegirnos</h3>
@@ -65,95 +97,13 @@
 
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-   <div class="container">
+   <div>
 
-    <a class="btn login" data-bs-toggle="offcanvas" href="#offcanvas1"><i class="fa-solid fa-user"></i>
+    <a class="size login" href="/usuario"><i class="fa-solid fa-user"></i>
     </a>   
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas1">
-      <div class="offcanvas-header">
-        <button type="button" class=" button.login btn-close text-reset" data-bs-dismiss="offcanvas"></button>
-      </div>
-      <div class="offcanvas-body">
-        <form>
-          <!--   con = Container  for items in the form-->
-          <div class="con">
-          <!--     Start  header Content  -->
-          <header class="head-form">
-             <h2>Ingresar</h2>
-          </header>
-          <br>
-          <div class="field-set">
-             <!--   user name -->
-                <span class="input-item">
-                  <i class="fa fa-user-circle"></i>
-                </span>
-               <!--   user name Input-->
-                <input class="form-input" id="txt-input" type="text" placeholder="Nombre de usuario" required>
-            
-             <br>
-            
-                  <!--   Password -->
-            
-             <span class="input-item">
-               <i class="fa fa-key"></i>
-              </span>
-             <!--   Password Input-->
-             <input class="form-input" type="password" placeholder="Contraseña" id="pwd"  name="password" required>
-            
-            
-            
-             <br>
-       <!--        buttons -->
-       <!--      button LogIn -->
-             <button class="button.login log-in"> Log In </button>
-          </div>
-         
-       <!--   other buttons -->
-          <div class="other">
-       <!--      Forgot Password button-->
-             <button class=" btn submits frgt-pass">Forgot Password</button>
-       <!--     Sign Up button -->
-             <button class="btn submits sign-up">Sign Up 
-  
-       <!--         Sign Up font icon -->
-             <i class="fa fa-user-plus" ></i>
-             </button>
-          </div>
-         </div>
-       </form>
-  
-  </div>
-
     
-   <div class="container">
-
-    
-      
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas2">
-      <div class="offcanvas-header">
-        <h3 class="offcanvas-title">Registrarse</h3>
-        
-      </div>
-      <div class="offcanvas-body">
-        <form>
-          <div class="mb-3">
-            <label for="nombre" class="form-label">Usuario:</label>
-            <input type="text" class="form-control" id="usuario" name="usuario" required>        
-          </div>
-          <div class="mb-3">
-            <label for="clave" class="form-label">Contraseña:</label>
-            <input type="password" class="form-control" id="clave" name="clave" required>
-          </div>
-          <div class="mb-3">
-            <label for="clave" class="form-label">Confirmar contraseña:</label>
-            <input type="password" class="form-control" id="clave" name="clave" required>
-          </div>
-          <button type="submit" class="btn btn-primary">Confirmar </button>
-        </form>            
-      </div>
-    </div>    
-  </div>
-
+  
+   </div>
 
  </header>
   <main>
@@ -233,9 +183,9 @@
     </p>
       
 
-        <a href=""><img class="iconos" src="/images/logo face.png" alt=""><i class="fa fa-facebook"></i></a>
-        <a href="#"><img class="iconos" src="/images/logo ig.png" alt=""><i class="fa fa-twitter"></i></a>
-        <a href="#"><img class="iconos" src="/images/logo wpp.png" alt=""><i class="fa fa-linkedin"></i></a>
+        <a href=""><img class="iconos" src="/images/logo face.png" alt=""></i></a>
+        <a href="#"><img class="iconos" src="/images/logo ig.png" alt=""></i></a>
+        <a href="#"><img class="iconos" src="/images/logo wpp.png" alt=""></a>
 
       
 
